--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.5.7",
+    "graphql": "^16.2.0",
     "next": "^12.0.8",
     "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
