--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "keywords": [
     "blog"
@@ -15,8 +18,6 @@
   "author": "Alex Chapman",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.5.7",
-    "graphql": "^16.2.0",
     "next": "^12.0.8",
     "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
@@ -24,6 +25,10 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.10"
+    "@next/bundle-analyzer": "^12.0.8",
+    "@apollo/client": "^3.5.7",
+    "@babel/core": "^7.16.10",
+    "graphql": "^16.2.0",
+    "cross-env": "^7.0.3"
   }
 }
