--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.8",
     "@apollo/client": "^3.5.7",
     "@babel/core": "^7.16.10",
-    "graphql": "^16.2.0",
-    "cross-env": "^7.0.3"
+    "@next/bundle-analyzer": "^12.0.8",
+    "cross-env": "^7.0.3",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "graphql": "^16.2.0"
   }
 }
