--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Alex Chapman",
   "license": "ISC",
   "dependencies": {
+    "mdx-prism": "^0.3.4",
     "next": "^12.0.8",
     "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
